Add PDFs from docx, update chair and directors
All Committee pages updated. No more ACDS, Chairs Images only shown,
Director names. Updated Nav Links to include all pdfs

--- a/crisis-cabinet-syria.html
+++ b/crisis-cabinet-syria.html
@@ -156,8 +156,7 @@
                 <div class="heading-box">
                     <h3 class="big-title wow slideInLeft animated"
                         style="visibility: visible; animation-name: slideInLeft;font-size:2em;font-weight:bold;">
-                        Special Political And Decolonization Committee
-
+                        Bashar Al Assad Syrian Crisis Cabinet (Continual Crisis Committee)
 
                     </h3>
                     <h4 class="big-sub-title wow slideInRight animated"
@@ -181,7 +180,7 @@
                 </div>
 
                 <div class="member-info">
-                    <span class="member-name">Haseeb Ul Hassan</span><br/>
+                    <span class="member-name">Ahmad Iqbal</span><br/>
                     <span class="member-title">Chair</span>
                 </div>
             </div>
@@ -190,8 +189,8 @@
                 <h1>Directors</h1>
                 <hr/>
                 <ul>
-                    <li>Firas Loan</li>
-                    <li>Shabraiz Mushtaq</li>
+                    <li>Ibrahim Riaz</li>
+                    <li>Kazim Raza</li>
                 </ul>
             </div>
 
@@ -210,54 +209,26 @@
             <h2 style="text-align: center;">Committee Topic</h2>
             <hr/>
 
-            <h4 style="text-align: center;">Topic A: Drones: A Question of National Sovereignty
+            <h4 style="text-align: center;">Topic : Syrian Rehabilitation
             </h4>
 
             <p>
 
-                In its simplest form, extradition is the act of one governmental authority formally turning over an
-                alleged criminal to another governmental authority for prosecution for a criminal charge. Generally,
-                extradition happens between two states or two countries. The legal concept of extradition was created by
-                the Extradition Clause of the Constitution of the United States of America, found in Article IV, Section
-                2. Specifically, the Extradition Clause states that if a person commits a crime in one state and then
-                flees to another state, then if the state where the crime was committed demands the criminal's return,
-                the state where he was found must return him to the state where the crime was committed. U.K extradition
-                procedures may breach human rights and those facing removal should encounter fewer obstacles in
-                obtaining legal aid, according to a House of Lords report. In a detailed examination of law and
-                practice, peers found no “systemic problem” but highlighted flaws – particularly in the way assurances
-                given by foreign states seeking suspects were not always being honored. The protracted nature of
-                extradition cases, the absence of a requirement for prima facie evidence, use of the European arrest
-                warrant (EAW) for sometimes trivial offences and harsh US detention conditions have all made the regime
-                the subject of fierce political controversy.
-
-
-            </p>
-
-            <h4 style="text-align:center;margin-top:40px;">Topic B: Review of the United Nations Peacebuilding
-                Architecture</h4>
-
-            <p>
-
-                Peacebuilding is a wide and multi-faceted set of actions which mainly aim to reduce the risk of
-                relapsing into conflict by strengthening national capacities in the form of infrastructure rebuilding,
-                government functionality, law enforcement and social reconciliation, so as to lay the foundation for
-                sustainable peace and development. It is a complex, long-term process of creating the necessary
-                conditions for sustainable peace.<br/><br>
-                The boundaries between conflict prevention, peacemaking, peacekeeping, peacebuilding and peace
-                enforcement have become increasingly blurred. Peace operations are rarely limited to one type of
-                activity. While UN peacekeeping operations are, in principle, deployed to support the implementation of
-                a ceasefire or peace agreement, they are often required to play an active role in peacemaking efforts
-                and may also be involved in early peacebuilding activities. However, UN Peacekeepers have many
-                limitations: one of which is inability to engage in large scale combat against powerful opponents. This
-                limitation limits their effectiveness.<br><br>
-                There is also a Peacebuilding Commission (PBC), which is an intergovernmental advisory body that
-                supports peace efforts in countries emerging from conflict. The PBC has a very prominent role in
-                ensuring peacebuilding, such as; advising and proposing integrated strategies for post conflict
-                peacebuilding and recovery and when appropriate, highlighting any gaps that threaten to undermine peace.
-                What the delegates of the Special Political and Decolonization Committee will be required to do when
-                debating on this topic is to review the current peacebuilding structure and decide whether it is
-                efficient or not. How to improve the efficiency, if any is required. Whether the creation of new bodies
-                (organs) within the United Nations is needed.
+                A brutal affair in the war torn Syrian Arab Republic, The Cabinet of Ministers under the Syrian regime
+                Bashar Al Asad faces some of the biggest challenges not only in the history of the country but the
+                history of the world. Since 2011 Syria has been engulfed in a civil war, with a plethora of fighting
+                parties such as “The Free Syrian Army” rejecting the rule of Damascus and waging a war against the
+                government and “The Islamic State of Iraq or Syria” or “Daesh” as it is locally known fighting and
+                controlling the region from “Abu Kamal” to “Maskanah”. With the war still persisting and the fighting
+                groups not laying down their weapons to the Syrian Government an the infrastructure of the country
+                damaged, a major problem still persists for the rule. The Ministers under Bashar Al Asad have a plenty
+                of things to sort out, from taking steps that result in an end to the current geopolitical crisis
+                prevailing in the country to adopting certain policies and securing deals that will benefit the overall
+                progress of the currently much affected Syria. Delegates will serve the role of Syrian Ministers under
+                Bashar Al Asad, taking steps under their portfolio powers that re-establish peace once again and
+                contributes to the smooth rehabilitation of the Syrian Arab Republic. Know this, however: The President
+                of Syria will see his beloved country to greatness, with the security of his regime. *Bashar Al Asad's
+                Council of Ministers is a continual crisis committee
 
 
             </p>
@@ -381,6 +352,7 @@
 <!-- Custom js -->
 <script>
 		new WOW().init();
+
 
 
 
