--- a/crisis-pk.html
+++ b/crisis-pk.html
@@ -156,7 +156,7 @@
                 <div class="heading-box">
                     <h3 class="big-title wow slideInLeft animated"
                         style="visibility: visible; animation-name: slideInLeft;font-size:2em;font-weight:bold;">
-                        Special Political And Decolonization Committee
+                        National Crisis Cell of Pakistan (Crisis Committee)
 
 
                     </h3>
@@ -181,7 +181,7 @@
                 </div>
 
                 <div class="member-info">
-                    <span class="member-name">Haseeb Ul Hassan</span><br/>
+                    <span class="member-name">Hubaib Haider </span><br/>
                     <span class="member-title">Chair</span>
                 </div>
             </div>
@@ -190,8 +190,8 @@
                 <h1>Directors</h1>
                 <hr/>
                 <ul>
-                    <li>Firas Loan</li>
-                    <li>Shabraiz Mushtaq</li>
+                    <li>Hanzala Rasheed</li>
+                    <li>Shahab Akmal</li>
                 </ul>
             </div>
 
@@ -210,55 +210,109 @@
             <h2 style="text-align: center;">Committee Topic</h2>
             <hr/>
 
-            <h4 style="text-align: center;">Topic A: Drones: A Question of National Sovereignty
+            <h4 style="text-align: center;">Topic: Drug Trade in Prisons
+
             </h4>
 
             <p>
 
-                In its simplest form, extradition is the act of one governmental authority formally turning over an
-                alleged criminal to another governmental authority for prosecution for a criminal charge. Generally,
-                extradition happens between two states or two countries. The legal concept of extradition was created by
-                the Extradition Clause of the Constitution of the United States of America, found in Article IV, Section
-                2. Specifically, the Extradition Clause states that if a person commits a crime in one state and then
-                flees to another state, then if the state where the crime was committed demands the criminal's return,
-                the state where he was found must return him to the state where the crime was committed. U.K extradition
-                procedures may breach human rights and those facing removal should encounter fewer obstacles in
-                obtaining legal aid, according to a House of Lords report. In a detailed examination of law and
-                practice, peers found no “systemic problem” but highlighted flaws – particularly in the way assurances
-                given by foreign states seeking suspects were not always being honored. The protracted nature of
-                extradition cases, the absence of a requirement for prima facie evidence, use of the European arrest
-                warrant (EAW) for sometimes trivial offences and harsh US detention conditions have all made the regime
-                the subject of fierce political controversy.
-
-
-            </p>
-
-            <h4 style="text-align:center;margin-top:40px;">Topic B: Review of the United Nations Peacebuilding
-                Architecture</h4>
-
-            <p>
-
-                Peacebuilding is a wide and multi-faceted set of actions which mainly aim to reduce the risk of
-                relapsing into conflict by strengthening national capacities in the form of infrastructure rebuilding,
-                government functionality, law enforcement and social reconciliation, so as to lay the foundation for
-                sustainable peace and development. It is a complex, long-term process of creating the necessary
-                conditions for sustainable peace.<br/><br>
-                The boundaries between conflict prevention, peacemaking, peacekeeping, peacebuilding and peace
-                enforcement have become increasingly blurred. Peace operations are rarely limited to one type of
-                activity. While UN peacekeeping operations are, in principle, deployed to support the implementation of
-                a ceasefire or peace agreement, they are often required to play an active role in peacemaking efforts
-                and may also be involved in early peacebuilding activities. However, UN Peacekeepers have many
-                limitations: one of which is inability to engage in large scale combat against powerful opponents. This
-                limitation limits their effectiveness.<br><br>
-                There is also a Peacebuilding Commission (PBC), which is an intergovernmental advisory body that
-                supports peace efforts in countries emerging from conflict. The PBC has a very prominent role in
-                ensuring peacebuilding, such as; advising and proposing integrated strategies for post conflict
-                peacebuilding and recovery and when appropriate, highlighting any gaps that threaten to undermine peace.
-                What the delegates of the Special Political and Decolonization Committee will be required to do when
-                debating on this topic is to review the current peacebuilding structure and decide whether it is
-                efficient or not. How to improve the efficiency, if any is required. Whether the creation of new bodies
-                (organs) within the United Nations is needed.
-
+                The word "Crisis" may just be an overused word taken as an excuse to categorize almost every global and
+                national risk, threat or potential threats rising but in the case of Pakistan (one of the most important
+                strategically placed countries in the world) it is a mere definition of the fragile and magnanimously
+                complex current state. Even for a lay man interested only in the loaf of bread that this country
+                provides to him the plethora of real crisis jumbles up to become a list of challenges defining the
+                future of his state; the constant deterioration in relations with Afghanistan in the North, fear of
+                possible annexation and independence of Baluchistan sharing its borders with hostile Afghans, the
+                potential threats of large influx of RAW agents from the Indian Border and Indian Agency in Kandahar,
+                the growing Chinese influence through uncontrolled means of alliance in the form of Gwadar Sea Port and
+                the Karakoram Highway, and the ever tense situation in Indian held and Azad Jammu Kashmir to sum it all
+                up. These growing national issues place a country (that is so important to the most prominent ones in
+                the world due to its strong military serving as possibly the world’s most effective tool against the
+                Taliban, its heavy nuclear arsenal placed in the middle of a country placed so close to the main ISIS
+                centers and the fact that Pakistan serves as the Islamic Hub of the 67 Muslim countries sharing close
+                relations with the dipoles of modern Islamic power; Saudi Arabia and Iran) in a task that is
+                ever-growing in its difficulty facing a Pakistan weakened in every aspect except for its military power
+                over the last 67 years of its founding. Despite these external challenges the internal ones always find
+                a way to seep into the Pakistani News everyday clearly highlighting themselves as more important.
+                Islamic Fundamentalism: The US and west view Islamic fundamentalism as a threat to its new hegemonic
+                power. This is a self-created and self-motivated concept of West particular in the context of Muslim
+                world. Suicide bombing, killing, terrorist attack and extremist has been present in every society since
+                past and is present in every corner of the world. History of the world is full of many incidents and
+                personalities who are involved in terrorist and extremists activities and did not belong to Islamic
+                Society. Mostly persons blamed in recent extremist activities are those which belong to Muslim community
+                but they are brought up in Western societies. We need to wash away the title of extremist from our faces
+                while dealing in the comity of nations. Through our foreign policy we need to present a picture that we
+                are a responsible and moderate Muslim country. Some fraction of society opposed president Musharraf’s
+                cooperation with Washington and the US presence in Pakistan and Afghanistan. This led some radical
+                Muslim to call for Musharraf’s assassination and an Islamic revolution in Pakistan. Benazir’s
+                assassination is also an episode of the same serial. These events lead towards the tarnishing image of
+                Pakistan and portray like a rogue state, a supporter of terrorism that already possessed weapons of man
+                destruction. Prevention of another India- Pakistan war, wider strategic cooperation and stronger
+                economic ties with US, Pakistan’s identity as a moderate Muslim state is challenges faced by Pakistani
+                government on foreign policy front in new millennium. In addition to this, Pakistan continues to face
+                tremendous pressure from western media, which critically examine the imagined links between Al-Qaeda and
+                Pakistan. American media in particular tried to label Pakistani intelligentsia, intelligence agencies
+                and nuclear scientists, collaborating and assisting to develop “dirty bomb”. Pakistani scientist has
+                also been labeled as fundamentalist. Lose Angels Times even declared Abdul Qadeer Khan “The man that
+                could be called the Axis of Evil” expressing concern and suspicion regarding the link of Pakistan’s
+                nuclear program with some of the Islamic countries9. This is the biggest challenge of the time
+                particularly in the environment where suicide bombing and killing of innocent human being have become
+                the music of the day and major challenge in Pakistan. Drone attacks: US forces launched drone attacks on
+                different villages of Bajour agency and other part of Waziristan and adjacent tribal areas. This area
+                falls under the administrative control of Pakistan. Pakistan’s territorial sovereignty has been violated
+                by the US forces on the pretext of hot pursuit of Al-Qaeda and Taliban remnants and the causalities and
+                death toll of civilians are rising day by day on the name of collateral damage. There has been strong
+                public reaction in Pakistan against the recent US drone attack in Northern part of Pakistan which
+                resulted in the killing of hundreds of people, including women and children. It is a flagrant violation
+                of Pakistan sovereignty according to the norms of international law. People are of the opinion that any
+                action against Al-Qaeda on Pakistani soil should be taken by the Pakistani authorities not by American
+                forces or at least Pakistani authorities should be informed prior to any action. The response of
+                Pakistani government in this matter has been inadequate and it is quite alarming to note that Washington
+                does not care about tendering an apology for the blatant violation of Pakistan’s sovereignty and lose of
+                human lives instead Washington has defended its action on grounds of tracking down terrorist. These
+                attacks are an eye opener for Pakistani government. It shows that government is proved as a failure in
+                providing sovereignty to its citizens and territory and US announced that they will take such actions in
+                futures if there is necessity. Public anger in Pakistan against both the US and the present government
+                on this issue is mounting up as these unacceptable acts are questioning our national dignity and
+                security. Balochistan issue: Balochistan has assumed a serious dimension particularly in the post Gwadar
+                Scenario. Akbar Bugti’s assassination, mineral resources, reservoirs of natural gas and coal are the
+                vital issues which caused feeling of discrimination among people of the area. External factors like
+                India and Iran are reported to be further aggravating the situation. Since the US invasion over
+                Afghanistan, Balochistan is tending to acquire importance in the American policy of South Asia.
+                Balochistan enjoys extraordinary geostrategic importance since it is the hub between South Asia, West
+                Asia and Central Asia. Another aspect of Balochistan’s strategic importance to the US is the role of
+                China in deep sea Gwadar Port. American are so concern on this internal matter of security of Pakistan
+                that a Republican congressman, Thomas Tancredo in a letter sent to former US Secretary of State
+                Condoleezza Rice wrote. “It is my understanding that president Bush will be traveling to Pakistan in
+                March 2006. Please urge him to raise the issue of Balochistan with president Musharraf so this dispute
+                may come to conclusion and further losses of life may be prevented Mr. Tancredo claims that the
+                operation in Balochistan divert important military resources that could be used to hunt Al- Qaeda and
+                other terrorist groups10. In actual, White House wants to delineate Chinese influence in the region by
+                controlling the geostrategic location of Balochistan to access Central Asian states. It is also worthy
+                to note that the forces of nationalism in Baluchistan are threats to national integration and
+                federation. Nuclear Proliferation issue It has been rightly stated by Margaret Thatcher that huffing and
+                puffing about test bans and non-proliferation did not stop India and Pakistan and is not going to stop
+                major states from getting nuclear weapon when their security interest19. IAEA pointed towards Pakistan
+                for proliferating WMDs and no Muslim country supported us. It does mean that we should not delink
+                ourselves from OIC but we should first seek our own national interest than we should look towards Umah.
+                It is further alleged that Pakistan’s nuclearization has contributed to international terrorism. The US
+                expressed serious concern regarding the authenticity
+                of the control and command system and Pakistan’s ability to protect its nuclear assets. Daily Dawn
+                reported the arrival of arms control Scientists in Islamabad to assess the foolproof measures for the
+                protection and safety of nuclear installations. Dr. Abdul Qadeer Khan is also a victim of the same
+                allegation that he has been involved in transferring the nuclear technology to Iran and North Korea.
+                Kashmir issue: William E. Brown and Robert Windrem in their controversial book “Critical Mass” had
+                maintained that because of the Kashmir issue south Asia is the most dangerous place on the earth20.
+                Kashmir has always been a bone of contention between India and Pakistan for the last 63 years. Religious
+                and emotional attachment of people of Pakistan with Kashmir always pursues the policy makers to take
+                tough and non-flexible stance over Kashmir issue. On the other hand Kashmiris are angry on Pakistan’s
+                policy towards Kashmir because they have not rendered scarifies of their lives merely for the sake of a
+                bus service, ferry service, train service, self-governance and option like a “united states of Kashmir.”
+                But clearly their goal is Islam and Pakistan for which they are offering the precious sacrifice of their
+                lives. The reliability on UN has so far yielded benefits equal to nil and the task is on Pakistan's
+                shoulders itself for the Pakistan National Assembly to step up and curb these internal threats with
+                honor, nationalistic integrity, self-correction and above all force that has been missing for quite a
+                lot of time now.
 
             </p>
 
@@ -381,6 +435,10 @@
 <!-- Custom js -->
 <script>
 		new WOW().init();
+
+
+
+
 
 
 
