--- a/disec.html
+++ b/disec.html
@@ -70,6 +70,8 @@
 
 <!-- Header start -->
 <header id="header" role="banner">
+
+    <!-- Logo start -->
     <nav class="navbar navbar-default navbar-fixed-top on" id="tf-menu">
         <div class="container">
             <div class="row">
@@ -89,14 +91,31 @@
                         </a>
                     </div>
                 </div><!--/ Logo end -->
-               <div class="collapse navbar-collapse clearfix navMenu" role="navigation">
+                <div class="collapse navbar-collapse clearfix navMenu" role="navigation">
                     <ul class="nav navbar-nav navbar-right">
-                        <li class=""><a class="page-scroll" href="/">Home</a></li>
+                        <li class=""><a class="page-scroll" href="#">Home</a></li>
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
                                aria-haspopup="true" aria-expanded="false">About<span class="caret"></span></a>
                             <ul class="dropdown-menu">
-                                <li><a href="coming-soon.html">Executive Council</a></li>
+                                <li class="menu-item dropdown dropdown-submenu">
+                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Executive Council</a>
+                                    <ul class="dropdown-menu">
+                                        <li class="menu-item ">
+                                            <a href="#">Secretary General</a>
+                                        </li>
+
+                                        <li class="menu-item ">
+                                            <a href="#">President</a>
+                                        </li>
+
+                                        <li class="menu-item ">
+                                            <a href="#">Director General</a>
+                                        </li>
+
+
+                                    </ul>
+                                </li>
                                 <li><a href="coming-soon.html">Secratariat</a></li>
                                 <li><a href="coming-soon.html">Directorate</a></li>
                             </ul>
@@ -107,11 +126,11 @@
                                aria-haspopup="true" aria-expanded="false">Information<span class="caret"></span></a>
                             <ul class="dropdown-menu">
                                 <li><a href="coming-soon.html">Rules of Procedure</a></li>
-                                <li><a href="coming-soon.html">Position Paper Sample</a></li>
-                                <li><a href="coming-soon.html">Registration Guidelines</a></li>
+                                <li><a href="images/position-paper.pdf">Position Paper Sample</a></li>
+                                <li><a href="images/registration-details-acmun-vii.pdf">Registration Guidelines</a></li>
 
                                 <li><a href="images/schedule.pdf">Schedule</a></li>
-                                <li><a href="coming-soon.html">Draft Resolution Sample</a></li>
+                                <li><a href="images/resolution.pdf">Draft Resolution Sample</a></li>
                                 <li><a href="coming-soon.html">Outstation Information</a></li>
                             </ul>
                         </li>
@@ -165,14 +184,13 @@
             </div>
 
             <div class="col-md-6 col-xs-6 committee-directors">
-               <h1>Directors</h1>
+                <h1>Directors</h1>
                 <hr/>
                 <ul>
                     <li>Muhammad Osama</li>
                     <li>Ibrahim Raza</li>
                 </ul>
             </div>
-
 
 
         </div>
@@ -340,6 +358,7 @@
 <!-- Custom js -->
 <script>
 		new WOW().init();
+
 
 
 </script>
