--- a/index.html
+++ b/index.html
@@ -107,11 +107,11 @@
                                aria-haspopup="true" aria-expanded="false">Information<span class="caret"></span></a>
                             <ul class="dropdown-menu">
                                 <li><a href="coming-soon.html">Rules of Procedure</a></li>
-                                <li><a href="images/position-paper.docx">Position Paper Sample</a></li>
-                                <li><a href="images/registration-details-acmun-vii.docx">Registration Guidelines</a></li>
+                                <li><a href="images/position-paper.pdf">Position Paper Sample</a></li>
+                                <li><a href="images/registration-details-acmun-vii.pdf">Registration Guidelines</a></li>
 
                                 <li><a href="images/schedule.pdf">Schedule</a></li>
-                                <li><a href="images/resolution.docx">Draft Resolution Sample</a></li>
+                                <li><a href="images/resolution.pdf">Draft Resolution Sample</a></li>
                                 <li><a href="coming-soon.html">Outstation Information</a></li>
                             </ul>
                         </li>
@@ -332,7 +332,7 @@
                 </div> <!--  col end -->
 
                 <div class="feature-box col-md-3 col-sm-6">
-                    <a href="coming-soon.html">
+                    <a href="images/position-paper.pdf">
                         <i class="icon icon-documents"></i>
                         <h4 class="title">Position Paper</h4>
                         <hr>
