--- a/unsc.html
+++ b/unsc.html
@@ -71,8 +71,8 @@
 <!-- Header start -->
 <header id="header" role="banner">
 
-    <!-- Logo start -->
-    <nav class="navbar navbar-default navbar-fixed-top on" id="tf-menu">
+                <!-- Logo start -->
+                <nav class="navbar navbar-default navbar-fixed-top on" id="tf-menu">
         <div class="container">
             <div class="row">
                 <!-- Logo start -->
@@ -156,7 +156,7 @@
                 <div class="heading-box">
                     <h3 class="big-title wow slideInLeft animated"
                         style="visibility: visible; animation-name: slideInLeft;font-size:2em;font-weight:bold;">
-                        Special Political And Decolonization Committee
+                        United Nations Security Council
 
 
                     </h3>
@@ -181,7 +181,7 @@
                 </div>
 
                 <div class="member-info">
-                    <span class="member-name">Haseeb Ul Hassan</span><br/>
+                    <span class="member-name">Widad Kamran</span><br/>
                     <span class="member-title">Chair</span>
                 </div>
             </div>
@@ -190,8 +190,8 @@
                 <h1>Directors</h1>
                 <hr/>
                 <ul>
-                    <li>Firas Loan</li>
-                    <li>Shabraiz Mushtaq</li>
+                    <li>Shaaniyal Shahid</li>
+                    <li>Aqdas Imran</li>
                 </ul>
             </div>
 
@@ -210,54 +210,55 @@
             <h2 style="text-align: center;">Committee Topic</h2>
             <hr/>
 
-            <h4 style="text-align: center;">Topic A: Drones: A Question of National Sovereignty
+            <h4 style="text-align: center;">Topic A: Checking the Expansionist and Totalitarian Policy of China
+
             </h4>
 
             <p>
 
-                In its simplest form, extradition is the act of one governmental authority formally turning over an
-                alleged criminal to another governmental authority for prosecution for a criminal charge. Generally,
-                extradition happens between two states or two countries. The legal concept of extradition was created by
-                the Extradition Clause of the Constitution of the United States of America, found in Article IV, Section
-                2. Specifically, the Extradition Clause states that if a person commits a crime in one state and then
-                flees to another state, then if the state where the crime was committed demands the criminal's return,
-                the state where he was found must return him to the state where the crime was committed. U.K extradition
-                procedures may breach human rights and those facing removal should encounter fewer obstacles in
-                obtaining legal aid, according to a House of Lords report. In a detailed examination of law and
-                practice, peers found no “systemic problem” but highlighted flaws – particularly in the way assurances
-                given by foreign states seeking suspects were not always being honored. The protracted nature of
-                extradition cases, the absence of a requirement for prima facie evidence, use of the European arrest
-                warrant (EAW) for sometimes trivial offences and harsh US detention conditions have all made the regime
-                the subject of fierce political controversy.
+                This topic shall encompass the crises in the regions of Tibet, the South China Sea, Taiwan and the
+                Sino-Indian Conflict, along with the rising Totalitarianism breeding from strict censorship laws and the
+                Dictator-like leading figures, an example of which is still in power, the Premier, Xi Jinping. These,
+                along with China's strategic alliances with states following non-cooperation policies such as Russia and
+                North Korea, pose a problem. Due to China's economic and political monopoly in Asia and its status as an
+                economic superpower, the threat that it could evolve into a rogue state that heeds not the warning of
+                any state, not even the United Nations, remains ever present. As we know from past precedents such as
+                the Chinese occupation of the state of Tibet which has led to the death of over 1.2 million Tibetans,
+                and human rights conditions remain dismal, China is a powerful state that cannot be allowed to run
+                rampant. In Tibet today, there is no freedom of speech, no freedom of assembly, no freedom of press and
+                no freedom of religion. Tibetan culture, language, identity, religion, economy and environment are all
+                modified and tweaked in such a way to benefit China exclusively, much less Tibet as a whole, and the job
+                condition has deteriorated, with Chinese occupants holding all the higher posts in government and there
+                being a huge imbalance in the resources available. China is thus a state that must be checked and held
+                accountable for all the various territorialistic aggression it embodies within its foreign policy, as
+                well as its mass propaganda and censorship within its borders.
 
 
             </p>
 
-            <h4 style="text-align:center;margin-top:40px;">Topic B: Review of the United Nations Peacebuilding
-                Architecture</h4>
+            <h4 style="text-align:center;margin-top:40px;">Topic B: Crisis in Somalia</h4>
 
             <p>
 
-                Peacebuilding is a wide and multi-faceted set of actions which mainly aim to reduce the risk of
-                relapsing into conflict by strengthening national capacities in the form of infrastructure rebuilding,
-                government functionality, law enforcement and social reconciliation, so as to lay the foundation for
-                sustainable peace and development. It is a complex, long-term process of creating the necessary
-                conditions for sustainable peace.<br/><br>
-                The boundaries between conflict prevention, peacemaking, peacekeeping, peacebuilding and peace
-                enforcement have become increasingly blurred. Peace operations are rarely limited to one type of
-                activity. While UN peacekeeping operations are, in principle, deployed to support the implementation of
-                a ceasefire or peace agreement, they are often required to play an active role in peacemaking efforts
-                and may also be involved in early peacebuilding activities. However, UN Peacekeepers have many
-                limitations: one of which is inability to engage in large scale combat against powerful opponents. This
-                limitation limits their effectiveness.<br><br>
-                There is also a Peacebuilding Commission (PBC), which is an intergovernmental advisory body that
-                supports peace efforts in countries emerging from conflict. The PBC has a very prominent role in
-                ensuring peacebuilding, such as; advising and proposing integrated strategies for post conflict
-                peacebuilding and recovery and when appropriate, highlighting any gaps that threaten to undermine peace.
-                What the delegates of the Special Political and Decolonization Committee will be required to do when
-                debating on this topic is to review the current peacebuilding structure and decide whether it is
-                efficient or not. How to improve the efficiency, if any is required. Whether the creation of new bodies
-                (organs) within the United Nations is needed.
+                Somalia is a nation situated in the Horn of Africa. It is flanked by Ethiopia toward the west, Djibouti
+                toward the northwest, the Gulf of Aden toward the north, the Indian Sea toward the east, and Kenya
+                toward the southwest. Somalia has a populace of around 10.8 million. Around 85% of its inhabitants are
+                ethnic Somalis. Ethnic minorities are to a great extent moved in the southern areas. A great many people
+                in the nation are Muslim, with the larger part being Sunni. Somalia was given independence by the
+                British and Italy in 1960, one of the last nations to be in the United Nations Trusteeship Council.
+                Civil unrest broke out in 1991, and this led Somalia to be declared a failed state for about a decade.
+                Even after the establishment of interim governments in the years 2000 and 2004, Somalia still topped the
+                world's charts in the Failed States Index (FSI) from 2008-2013. In the midst of this unrest, the Islamic
+                Courts Union was founded, and after a crushing defeat, gave way to its offshoot, Al-Shabaab. This
+                terrorist faction has since pledged allegiance to Al Qaeda and Boko Haram, the latter of which is a
+                known ally of the Islamic State. The organization portrays itself as pursuing jihad against "adversaries
+                of Islam", and is occupied with battle against the Government of Somalia and the African Union Mission
+                to Somalia (AMISOM). Al-Shabaab has been labelled a terrorist association by Australia, Canada, the
+                United Arab Emirates, the United Kingdom and the United States. As of June 2012, the US State Division
+                has declared open bounties on a few of the faction's senior authorities. The death toll in Somalia due
+                to both the civil war and the activities of Al-Shabaab is, since 1991, 500,000, averaging at 3000-4000
+                civilian casualties per annum, and a total of 1.1 million made either internally displaced or refugees.
+
 
 
             </p>
@@ -381,6 +382,7 @@
 <!-- Custom js -->
 <script>
 		new WOW().init();
+
 
 
 
