--- a/worldbank.html
+++ b/worldbank.html
@@ -71,8 +71,8 @@
 <!-- Header start -->
 <header id="header" role="banner">
 
-    <!-- Logo start -->
-    <nav class="navbar navbar-default navbar-fixed-top on" id="tf-menu">
+                <!-- Logo start -->
+                <nav class="navbar navbar-default navbar-fixed-top on" id="tf-menu">
         <div class="container">
             <div class="row">
                 <!-- Logo start -->
@@ -156,8 +156,7 @@
                 <div class="heading-box">
                     <h3 class="big-title wow slideInLeft animated"
                         style="visibility: visible; animation-name: slideInLeft;font-size:2em;font-weight:bold;">
-                        Special Political And Decolonization Committee
-
+                        World Bank
 
                     </h3>
                     <h4 class="big-sub-title wow slideInRight animated"
@@ -181,7 +180,7 @@
                 </div>
 
                 <div class="member-info">
-                    <span class="member-name">Haseeb Ul Hassan</span><br/>
+                    <span class="member-name">Usman Omer</span><br/>
                     <span class="member-title">Chair</span>
                 </div>
             </div>
@@ -190,8 +189,7 @@
                 <h1>Directors</h1>
                 <hr/>
                 <ul>
-                    <li>Firas Loan</li>
-                    <li>Shabraiz Mushtaq</li>
+                    <li>Fayez Loan</li>
                 </ul>
             </div>
 
@@ -210,57 +208,35 @@
             <h2 style="text-align: center;">Committee Topic</h2>
             <hr/>
 
-            <h4 style="text-align: center;">Topic A: Drones: A Question of National Sovereignty
+            <h4 style="text-align: center;">Topic: Combating Money Laundering and Corruption and Reconstructing
+                Accountability Mechanisms
+
             </h4>
 
             <p>
 
-                In its simplest form, extradition is the act of one governmental authority formally turning over an
-                alleged criminal to another governmental authority for prosecution for a criminal charge. Generally,
-                extradition happens between two states or two countries. The legal concept of extradition was created by
-                the Extradition Clause of the Constitution of the United States of America, found in Article IV, Section
-                2. Specifically, the Extradition Clause states that if a person commits a crime in one state and then
-                flees to another state, then if the state where the crime was committed demands the criminal's return,
-                the state where he was found must return him to the state where the crime was committed. U.K extradition
-                procedures may breach human rights and those facing removal should encounter fewer obstacles in
-                obtaining legal aid, according to a House of Lords report. In a detailed examination of law and
-                practice, peers found no “systemic problem” but highlighted flaws – particularly in the way assurances
-                given by foreign states seeking suspects were not always being honored. The protracted nature of
-                extradition cases, the absence of a requirement for prima facie evidence, use of the European arrest
-                warrant (EAW) for sometimes trivial offences and harsh US detention conditions have all made the regime
-                the subject of fierce political controversy.
+                Money laundering (ML) is a broad term used to describe the activity of concealing the source and
+                ownership of money and/or property. Illegal activities, such as drug trafficking, smuggling, human
+                trafficking, corruption, terrorism and others, tend to generate large amounts of profits for the
+                individuals or groups carrying out the criminal act. However, by using funds from such illicit sources,
+                criminals risk drawing attention to themselves and being criminally persecuted. In order to benefit
+                freely from the proceeds of their crime, they must therefore conceal the illicit origin of these funds.
+                Money Laundering has evolved to take many identities such as False Trade Invoicing and High Value
+                Commodities that are almost impossible to track and trace and has resulted in a downfall in government
+                economies. Not only does this issue prevail in governments but international banks are also a haven for
+                money laundering with Switzerland as the undisputed sanctuary for money launderers. The International
+                Community has previously taken severe actions to eradicate money laundering, however, each time, new
+                ways to launder money are fashioned. The World Bank will discuss the various international bodies
+                involved in combating money laundering and form frameworks to ensure effective regulation by these
+                bodies. Delegates are required provide suitable mechanisms to prevent loans being provided with little
+                or no accountability and transparency and to ensure loans provided by the World Bank Group are used
+                effectively and productively. Delegates are also to keep in mind privacy and customer rights when
+                combating money laundering on a large scale via international banks.
 
 
             </p>
 
-            <h4 style="text-align:center;margin-top:40px;">Topic B: Review of the United Nations Peacebuilding
-                Architecture</h4>
 
-            <p>
-
-                Peacebuilding is a wide and multi-faceted set of actions which mainly aim to reduce the risk of
-                relapsing into conflict by strengthening national capacities in the form of infrastructure rebuilding,
-                government functionality, law enforcement and social reconciliation, so as to lay the foundation for
-                sustainable peace and development. It is a complex, long-term process of creating the necessary
-                conditions for sustainable peace.<br/><br>
-                The boundaries between conflict prevention, peacemaking, peacekeeping, peacebuilding and peace
-                enforcement have become increasingly blurred. Peace operations are rarely limited to one type of
-                activity. While UN peacekeeping operations are, in principle, deployed to support the implementation of
-                a ceasefire or peace agreement, they are often required to play an active role in peacemaking efforts
-                and may also be involved in early peacebuilding activities. However, UN Peacekeepers have many
-                limitations: one of which is inability to engage in large scale combat against powerful opponents. This
-                limitation limits their effectiveness.<br><br>
-                There is also a Peacebuilding Commission (PBC), which is an intergovernmental advisory body that
-                supports peace efforts in countries emerging from conflict. The PBC has a very prominent role in
-                ensuring peacebuilding, such as; advising and proposing integrated strategies for post conflict
-                peacebuilding and recovery and when appropriate, highlighting any gaps that threaten to undermine peace.
-                What the delegates of the Special Political and Decolonization Committee will be required to do when
-                debating on this topic is to review the current peacebuilding structure and decide whether it is
-                efficient or not. How to improve the efficiency, if any is required. Whether the creation of new bodies
-                (organs) within the United Nations is needed.
-
-
-            </p>
 
 
         </div>
@@ -381,6 +357,7 @@
 <!-- Custom js -->
 <script>
 		new WOW().init();
+
 
 
 
