--- a/unhrc.html
+++ b/unhrc.html
@@ -71,8 +71,7 @@
 <!-- Header start -->
 <header id="header" role="banner">
 
-    <!-- Logo start -->
-    <nav class="navbar navbar-default navbar-fixed-top on" id="tf-menu">
+       <nav class="navbar navbar-default navbar-fixed-top on" id="tf-menu">
         <div class="container">
             <div class="row">
                 <!-- Logo start -->
@@ -156,9 +155,7 @@
                 <div class="heading-box">
                     <h3 class="big-title wow slideInLeft animated"
                         style="visibility: visible; animation-name: slideInLeft;font-size:2em;font-weight:bold;">
-                        Special Political And Decolonization Committee
-
-
+                        United Nations Human Right Council
                     </h3>
                     <h4 class="big-sub-title wow slideInRight animated"
                         style="visibility: visible; animation-name: slideInRight;"></h4>
@@ -181,7 +178,7 @@
                 </div>
 
                 <div class="member-info">
-                    <span class="member-name">Haseeb Ul Hassan</span><br/>
+                    <span class="member-name">Muhammad Ahmed Saeed</span><br/>
                     <span class="member-title">Chair</span>
                 </div>
             </div>
@@ -190,8 +187,8 @@
                 <h1>Directors</h1>
                 <hr/>
                 <ul>
-                    <li>Firas Loan</li>
-                    <li>Shabraiz Mushtaq</li>
+                    <li>Sannan Saleh</li>
+                    <li>Haris Zaki</li>
                 </ul>
             </div>
 
@@ -210,54 +207,22 @@
             <h2 style="text-align: center;">Committee Topic</h2>
             <hr/>
 
-            <h4 style="text-align: center;">Topic A: Drones: A Question of National Sovereignty
+            <h4 style="text-align: center;">Topic : Terrorists profiling: Xenophobia, islamophobia and other
+                discriminatory practices and attitudes
             </h4>
 
             <p>
 
-                In its simplest form, extradition is the act of one governmental authority formally turning over an
-                alleged criminal to another governmental authority for prosecution for a criminal charge. Generally,
-                extradition happens between two states or two countries. The legal concept of extradition was created by
-                the Extradition Clause of the Constitution of the United States of America, found in Article IV, Section
-                2. Specifically, the Extradition Clause states that if a person commits a crime in one state and then
-                flees to another state, then if the state where the crime was committed demands the criminal's return,
-                the state where he was found must return him to the state where the crime was committed. U.K extradition
-                procedures may breach human rights and those facing removal should encounter fewer obstacles in
-                obtaining legal aid, according to a House of Lords report. In a detailed examination of law and
-                practice, peers found no “systemic problem” but highlighted flaws – particularly in the way assurances
-                given by foreign states seeking suspects were not always being honored. The protracted nature of
-                extradition cases, the absence of a requirement for prima facie evidence, use of the European arrest
-                warrant (EAW) for sometimes trivial offences and harsh US detention conditions have all made the regime
-                the subject of fierce political controversy.
-
-
-            </p>
-
-            <h4 style="text-align:center;margin-top:40px;">Topic B: Review of the United Nations Peacebuilding
-                Architecture</h4>
-
-            <p>
-
-                Peacebuilding is a wide and multi-faceted set of actions which mainly aim to reduce the risk of
-                relapsing into conflict by strengthening national capacities in the form of infrastructure rebuilding,
-                government functionality, law enforcement and social reconciliation, so as to lay the foundation for
-                sustainable peace and development. It is a complex, long-term process of creating the necessary
-                conditions for sustainable peace.<br/><br>
-                The boundaries between conflict prevention, peacemaking, peacekeeping, peacebuilding and peace
-                enforcement have become increasingly blurred. Peace operations are rarely limited to one type of
-                activity. While UN peacekeeping operations are, in principle, deployed to support the implementation of
-                a ceasefire or peace agreement, they are often required to play an active role in peacemaking efforts
-                and may also be involved in early peacebuilding activities. However, UN Peacekeepers have many
-                limitations: one of which is inability to engage in large scale combat against powerful opponents. This
-                limitation limits their effectiveness.<br><br>
-                There is also a Peacebuilding Commission (PBC), which is an intergovernmental advisory body that
-                supports peace efforts in countries emerging from conflict. The PBC has a very prominent role in
-                ensuring peacebuilding, such as; advising and proposing integrated strategies for post conflict
-                peacebuilding and recovery and when appropriate, highlighting any gaps that threaten to undermine peace.
-                What the delegates of the Special Political and Decolonization Committee will be required to do when
-                debating on this topic is to review the current peacebuilding structure and decide whether it is
-                efficient or not. How to improve the efficiency, if any is required. Whether the creation of new bodies
-                (organs) within the United Nations is needed.
+                As time goes by, more and more groups of people are being stigmatized with a supposed prepossession of
+                violent behaviors, such as terrorist acts, mass murders, social conflicts and extremist opinions. These
+                oppressed groups cover a large spectrum of people, including Muslims, Arabs, and Hebrews, people of
+                color, refugees and migrants. On the other hand, mass crimes committed by Europeans or White People are
+                rarely really characterized as terrorist acts. Such mentalities and stereotypes that deprive humans of
+                their individuality, violate the principle that all people are equal and free, leading to further forms
+                of discrimination, for instance regarding media coverage or police control, sometimes even reaching
+                political and legislative decisions. Our Committee will discuss the various aspects of the issue,
+                examine the impact the phenomenon has on people’s lives, analyze the practices that violate fundamental
+                human rights and propose possible solutions in the terms of the United Nations framework.
 
 
             </p>
@@ -381,6 +346,7 @@
 <!-- Custom js -->
 <script>
 		new WOW().init();
+
 
 
 
